[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "*"
python-dotenv = "*"
pydantic = "*"
blockkit = "^1.9.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
